# RagOp

./: .gitattributes  .gitignore  LICENSE  README.md  incremental.py  pyproject.toml  rag_mcp_sdk_server.py  rag_mcp_server.py  setup.py
scripts/: ragop.ps1  ragop.sh  setup.ps1  setup.sh  setupBash.sh  smoke.sh
src/ragop/: __init__.py  cli.py  compose.py  config.py  index.py  retrieve.py
src/ragop.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
